<resources>
    <string name="app_name">SoundBytes</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="add_friend_hint">\@friend_username</string>
    <string name="pause_button_desc">Pause Audio</string>
    <string name="play_button_desc">Play Audio</string>
    <string name="pause_play_button_desc">Play or Play Audio</string>
    <string name="send_button_desc">Send Audio</string>
    <string name="add_friend_button_desc">Add a friend</string>
    <string name="record_audio_button_desc">Record new audio</string>
    <string name="title_activity_main">SoundBytes</string>
    <string name="record_fragment_title">Mix it!</string>
    <string name="newsfeed_fragment_title">NewsFeed</string>
    <string name="audio_recordings">Audio Recordings</string>
    <string name="delete">Delete</string>
    <string name="no_audio_text">No recordings create one!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="gcm_sender_id">524610911908</string>
    <string name="time_text">%ds</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="compulsory">%s is a compulsory field</string>
    <string name="no_messages">No messages :(</string>
    <string name="logged_out">Successfully logged out</string>
    <string name="logout">Logout</string>
    <string name="splashscreen">Splash Screen</string>
    <array name="nav_drawer">
        <item></item>
        <item>Name</item>
        <item>Username</item>
        <item>Age</item>
        <item>Logout</item>
    </array>
</resources>