<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp">
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/add_layout"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_height="95dp">
            <EditText
                android:inputType="textNoSuggestions"
                android:hint="@string/add_friend_hint"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/add_person_text"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
            <ImageButton
                android:contentDescription="@string/add_friend_button_desc"
                android:id="@+id/person_add_button"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/ic_person_add_black_24dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:padding="5dp"/>
        </LinearLayout>
        <ImageButton
            android:contentDescription="@string/record_audio_button_desc"
            android:layout_below="@+id/add_layout"
            android:scaleType="fitXY"
            android:src="@drawable/ic_keyboard_voice_black_24dp"
            android:id="@+id/mic_button"
            android:background="?android:selectableItemBackground"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            android:layout_centerInParent="true" />
        <ImageButton
            android:contentDescription="@string/send_button_desc"
            android:layout_marginBottom="45dp"
            android:id="@+id/send_button"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mic_button"
            android:background="?android:selectableItemBackground"
            android:scaleType="fitXY"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <ImageButton
            android:contentDescription="@string/pause_button_desc"
            android:scaleType="fitXY"
            android:layout_toRightOf="@+id/mic_button"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_pause_circle_outline_black_24dp"
            android:background="?android:selectableItemBackground"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <ImageButton
            android:contentDescription="@string/play_button_desc"
            android:scaleType="fitXY"
            android:layout_toLeftOf="@+id/mic_button"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_play_circle_outline_black_24dp"
            android:background="?android:selectableItemBackground"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </RelativeLayout>
</ScrollView>